--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,34 +1,20 @@
 ---
-title: 卫生局局长：Omicron疫情在东北地区放缓，但全美高峰尚未到来
+title: 加拿大对货运司机的疫苗护照严重破坏供应链
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1879479/)
+`扬帆枫叶快讯` [轉載自GNews](https://gnews.org/zh-hans/1879484/)
 
-据《华盛顿时报》记者：Tom Howell Jr.，2022年1月16日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3518.png)2021年9月21日星期二下午，美国外科医生Vivek Murthy在伊利诺伊州西塞罗参观了Access Hawthorne家庭健康中心后与记者交谈。图片源自：Ashlee Rezin/芝加哥太阳时报通过美联社
-美国外科医生Vivek Murthy周日表示，冬季COVID-19集中爆发在某些地区出现缓解，但Omicron变体在不同地区爆发时间不同，因此尚不清楚最坏的情况何时结束。
+加拿大温哥华扬帆农场    平民正道
 
-“好消息是，在部分地区，特别是纽约和东北部的其他地区，我们开始看到病例数已经企稳，在某些情况下，病例数出现早期下降，”他告诉CNN节目“联盟的州（State of the Union）”，“ Omicron自东部先爆发，然后蔓延至其他地区。因此，我们不应该期望在接下来的几天内出现全国性的高峰。但是接下来的几周将是艰难的。”
+据加拿大[CTV新闻]1月14日报道：联邦政府针对加拿大货运卡车司机的疫苗护照要求将给该国卡车运输行业造成极大混乱，并将使那些正在运输途中的司机陷入困境，而最终严重影响加拿大和美国的货物供应链。
+报道称，[加拿大卡车协会]当天呼吁当局，对此前已被派遣上路的未接种疫苗的卡车司机进行临时性接种豁免，以避免他们因此将在美加边境被迫隔离或提供病毒测试的阴性证明文件。
 
-Murthy博士同时谈到，美国每天记录的感染人数超过80万例，住院人数达到近16万人的历史最高水平。每天约有1,900人死于COVID-19，但这远低于去年1月每天3,300人的峰值。
+目前，特鲁多政府已宣布，所有未接种的卡车司机都将不会获得接种豁免。并仍然要求从美国进入加拿大的卡车司机都必须完全接种疫苗。而美国从1月22日起，将对任何越境进入美国的货车司机实施类似的规定。
 
-Omicron变体似乎没有其他中共病毒严重，但它传播速度快，因此仍能造成损失。这场危机对拜登总统造成了重大拖累，他承诺进行充分的测试，但却无法满足在冬季高峰期的测试需求。
+据悉，加美之间的年贸易总额接近6500亿加元，其中约80%是通过卡车运输的。该行业目前约有15%的司机未接种疫苗。因此，估计将有1万2千名加拿大卡车司机和数千名来自美国的卡车司机将被迫离开跨境运输路线，并因此将严重波及两国的物流供应链。
 
-拜登先生正在慌乱中试图迎头赶上。他购买了10亿份测试试剂盒，美国人很快就可以从网站上订购这些测试，并免费送货上门。他还在想办法免费送出高质量的口罩。
+* * *
 
-“在测试方面，我们当然还有更多工作要做，” Murthy博士说。 “这就是为什么你会看到众多与测试相关的供给渠道，以及为什么未来几个月供应量将继续增加。”
-
-美国食品和药物管理局前局长斯科特·戈特利布博士（Dr. Scott Gottlieb）说，测试对一些人来说可能成本高昂，市政当局也很难批量购买，但可以从一些在线零售商处购买，政府帮助免费投递会很有帮助。
-
-原文连接： [**https://www.washingtontimes.com/news/2022/jan/16/surgeon-general-omicron-slowing-northeast-dont-exp/**](https://www.washingtontimes.com/news/2022/jan/16/surgeon-general-omicron-slowing-northeast-dont-exp/)
-
-翻译：洛杉矶盘古农场 – 海潮
-校对：洛杉矶盘古农场 – Mike Li
-编辑：洛杉矶盘古农场 – WenXiong
-发布：洛杉矶盘古农场 – 恩典
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+编辑： 平民正道    发布：平民正道
 
  
 
