--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 西藏人口 水源 喜马拉雅
+title: 喜马拉雅地理位置的重要性
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879436/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879462/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
