--- a/gnews/45.md
+++ b/gnews/45.md
@@ -1,30 +1,38 @@
 ---
-title: 【中日财经爆】中共少子化时代到来
+title: 7·24系列——单伟建、TPG资本与Cahill律师所
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1878320/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1878068/)
 
-撰稿：东京樱花团/华夏伊人
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-60.jpg)[图片来源](https://hk.epochtimes.com/news/2021-04-19/42775261)
-1月17日，中共国家统计局发布了2021年度人口数据：全年出生人口1062万人，死亡人口1014万人，全年人口净增长48万人，人口自然增长率为0.34%。就出生人口数和净增数看，均创下1962年以来的开始新低，引发社会热议。
+**整理：**雅典娜情报组
+**编辑：**翼族
+![](https://assets.gnews.org/wp-content/uploads/2022/01/211.jpg)
+**相关链接：**[郭文贵先生谈PAG案时提到的律师和律师事务所](https://gnews.org/zh-hans/1738109/)
 
-人口净增长48万人，自然增长率为0.34%，意味着人口增长放缓，又向绝对的零人口增长迈进了一步。从世界各国人口发展历程看，人口少子化的确是经济社会发展到某个阶段后的必然现象。但是，不同的国家，导致人口增长率下跌的原因各有不同。
+近几日，太平联盟PAG诉郭文贵先生的官司在全世界引起了巨大反响，文贵先生在2022年1月18日的盖特小视频中谈到这起诉讼与单伟建和Cahill律师事务所的关系（概要）：
 
-中共国的年龄构成变化特点是未来人口中的年轻人口比重越来越小，老年人口的比重越来越大。过度老年化的人口是无法支撑起一个正常运转的社会，经济的竞争很大程度上取决于人口的竞争，人口变动对经济社会发展产生重要影响。
+##### 太平联盟的案子从2017年4月18日开始，然后《华尔街日报》报道所谓的双面间谍，包括当时美国的谣言，如何如何，中共发出什么样的信号？包括这次2月2号开庭，选在春节初一，所有选的日子几乎跟咱们发生的事情都能连在一起，就像GTV被调查，SEC泄露事件，还有多维网站所有的时间点，就像是习近平跟王岐山安排的一样，永远是在最坏的消息同时发生，而且一定有PAG。单伟建、Edward Moss是有多么大的能量？单伟建能让几个律师事务所围着他转。太平联盟跟O’Melveny律师所，还有Cahill律师事务所，还有Edward Moss，Bondi律师事务所的关系，就是单伟建一个人做起来的，从过去的TPG基金，到PAG太平联盟，他所有经历的事情，几乎都是给美国的律师界、大律师界打交道，从律师界到美国司法部，以及政府工作的这些人。单伟建文化大革命时期就跑出来，被中共培养送到西方学习，渗入到美国最高层。
 
-自2021年5月31日提出实施全面三孩政策以来，各种所谓的鼓励生育政策频出：延长产假、生育假；允许夫妻共同享受育儿假；三胎补贴；给予三胎家庭买房优惠或现金补贴等等。用鼓励政策去提振适育人群的生育意愿，但是就业和房价两座大山，才是构成了年轻人不愿不敢结婚生娃的主要原因。高失业率之下，年轻人的收入已经无法自给自足。高企的房价更是让年轻人望而却步。
+Cahill律师事务所，全称“卡西尔、戈登和雷德尔律师事务所”（Cahill Gordon & Reindel），成立于1919年，总部位于纽约，主要业务为资本市场、银行和金融领域等。在其官网上，可以看到以下几条与TPG资本（TPG Capital）相关的新闻，涉及数百亿美元的交易。
 
-正如哲学家康德所言“人是目的，而不是工具”。如果鼓励生育的政策目的只是把人当成生育的工具，而非从根本上服务民众的发展需求，忽略了深层次的需求和忧虑，那催生的措施注定要失败的。
+最早一篇发布于2007年10月26日的[新闻](https://www.cahill.com/news/firm-news/100266)称，Cahill律师事务所代表花旗集团、摩根士丹利和摩根大通担任信贷服务的代理人和安排人，这些信贷服务为银湖和**TPG资本**私有化收购电信公司Avaya提供了融资和营运资金需求，交易价值约为83亿美元。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/113-2.jpg)
+以上新闻中提到的Avaya，即亚美亚股份有限公司，是一家专长于IP电话、客服中心、机动语音与资讯科技的电信公司，前身为朗讯科技下网络系统事业单元。截至2006年为止约有20,000名雇员。
 
-一旦进入“低生育率陷阱”，想爬出来是千难万难的，如果你连爬出来的办法都想不到，那只能等待“人口消亡”了。先眼前后将来的简单粗暴鼓励生育政策，对于低生育率来说只能是饮鸩止渴，让年轻人自我意识到生得起，愿意生才是根本。
+另一篇发布于2008年1月28日的[新闻](https://www.cahill.com/news/firm-news/100296)称，全球最大的赌场公司Harrah’s Entertainment, Inc.（纽约证券交易所代码：HET）已被私募股权集团Apollo Management **【编者注：**拥有雅虎公司**】**和**TPG资本**以278亿美元的价格收购，该笔交易是有史以来将一家上市赌场公司私有化的最大交易。Cahill律师事务所代表美国银行、花旗集团、瑞士信贷、德意志银行、摩根大通和美林证券作为牵头安排人和联席账簿管理人，包括作为贝尔斯登**【编者注：**美国投资银行，后被摩根大通收购**】**和摩根士丹利的管理人，参与了160.25亿美元的债务收购，以及92.5亿美元的高级有担保信贷融通（包括72.5亿美元的定期贷款融通和20亿美元的循环信贷融通）和677.5万美元的高级无担保临时贷款融通。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/111-2.jpg)
+最近的一篇与TPG资本相关的[新闻](https://www.cahill.com/news/firm-news/101552)发布于2012年11月19日，该新闻称，Cahill律师事务所代表美国银行作为行政代理人和抵押代理人，以及牵头安排人，为卡车和拖车零件供应商FleetPride, Inc的附属公司FPC Holdings以其资产做抵押提供175,000,000美元的的循环信贷融资。还代表德意志银行美国信托公司（Deutsche Bank Trust Company Americas），作为其行政代理人和抵押代理人，以及牵头安排人，处理FPC Holdings公司的425,000,000美元的第一留置权定期贷款信贷安排和200,000,000美元的第二留置权定期贷款安排。贷款收益的使用与私人投资公司**TPG资本**收购FleetPride公司有关。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/112-3.jpg)
+单伟建大约在2000年左右加入TPG资本，担任合伙人长达12年，Cahill律师事务所参与TPG资本以上这些收购的法律事务时间，也正是单伟建在TPG任职的时间段，随后单伟建到PAG太盟担任集团主席兼行政总裁。Cahill成为PAG太盟缠诉郭文贵先生的律师事务所，绝不是偶然，而是单伟建等长期“深耕”美国司法界和律师界的必然结果！
 
-消息来源：
+*素材收集：翼族
+发布：翼族*
 
-[国家统计局：2021年全国人口净增加48万人](http://finance.people.com.cn/n1/2022/0117/c1004-32333012.html)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
