--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 西藏独立的意义
+title: 美国立法对于西藏独立的意义
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879499/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879529/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
