--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,28 +1,28 @@
 ---
-title: 中共借福奇之口定性美国疫情应对失败的原因
+title: 蒙塔尼耶:部分医师参与这场毒疫苗的人类大屠杀
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/1879498/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1879516/)
 
-作者：德国纽伦堡正义农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/01/福奇.jpeg)封面来源：网络图片
-新华社日内瓦2022年1月18日报道，美国国家过敏症和传染病研究所所长安东尼·福奇在17日举行的2022年世界经济论坛视频会议上说，美国本应该是应对新冠大流行准备最充分的国家，但却成为受疫情影响最严重的少数几个国家之一。美国公共卫生领域的不平等性，是造成这一现象的重要原因。
+撰稿:牛小妹
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Image-1-2-7.jpg)
+图片:网路
 
-**福奇明显是把自己在疫情和疫苗事件中的犯罪行为“甩锅”给美国整个公共卫生领域，目的就是在为即将到来的病毒和疫苗追责中推卸责任，福奇难道不知道自己本身就是美国“卫生独裁”沼泽地中的一条大鳄鱼？**
+“人类正在面临一场大屠杀，刽子手包括部分的医生。”法国病毒学家，2008年诺贝尔生理学或医学奖得主吕克•安托万•蒙塔尼耶（Luc Antoine Montagnier ）在卢森堡议会上指出。
 
-福奇在参加论坛关于新冠疫情未来发展趋势视频会议时说，如今，美国累计新冠确诊病例数已超过6500万、累计死亡近90万例，“这真的是非常不幸，也是我们原本希望可以避免的情况”。
+**伤害病人的医学是伪医学**
 
-**福奇在说这些冰冷数字的时候，难道一点愧疚之心都没有？福奇难道忘记了是谁给中共武汉实验室进行“病毒功能增强性实验”提供资金支持和技术支持？中共病毒爆发之际是谁说病毒不是来自实验室？是谁不敢提也不允许医生给病人推荐硫酸羟氯喹和伊维菌素？是谁说，希望人们能自愿接种疫苗，但如果他们不打算这样做，有时你不得不做一些不受欢迎的事情？太多了，不胜枚举，但这些都将会成为福奇的罪证。**
+“医生从希波克拉底誓言出发,最重要的就是不能伤害病人。如果说导致死亡的医学可以被称为医学,我绝对反对这样的想法。医学必须是尊重人的生命，医学必须是治癒、治疗病人,而不是杀死他们。” 蒙塔尼耶说，”然而，人类现在正在面临一个大屠杀，刽子手正是医生。” 蒙塔尼耶提醒大家，”医学界利用市场行销的商业规则,出售及强制使用能够杀死一定数量人的制剂。即便现在还没有杀死所有的人，但事实上它们已经杀死老人，现在开始杀死年轻、健康的人，甚至是儿童。不可思议的是，当局正在讨论湖和将疫苗接种扩大到儿童身上。” 蒙塔尼耶对世人提出警告。
 
-福奇总结说，“全球大流行需要全球应对，我们必须始终牢记公平问题，不能让病毒在世界某个地方自由传播的情况出现……我们应该作为一个全球社区去应对（挑战），这就是（疫情）给我们的重要教训。”。
+**COVID疫苗使人体不断复制错误讯息**
 
-**这个总结完全暴露了福奇及其背后世界黑暗势力和中共的野心，那就是要通过中共病毒的全球大流行造成的恐惧，给全世界老百姓都注射上毒疫苗，最后达到霸占整个地球、控制全人类命运的邪恶目的。**
+“在医学伦理层面，我绝对反对COVID疫苗。这些疫苗是毒药，它们不是真正的疫苗，它们是mRNA制剂，会在身体不断复制错误的讯息，破坏人体免疫系统。目前没有人清楚这些错误讯息会导致人体多大的灾难，这会是一个可怕的未知数!” 荣获多项奖项的病毒学家蒙塔尼耶提出沉重呼吁。
 
-新闻来源：🔗[福奇：公共卫生领域不平等是美国新冠疫情严重的重要原因](http://www.news.cn/world/2022-01/19/c_1128277767.htm)
+**COVID疫苗使人体产生脘蛋白(prion)，导致神经病变**
 
-*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
+一年多以前已经有研究指出，COVID疫苗会使人体产生脘蛋白(prion)，以一种不可预测的方式在我们的身体诱发蛋白质的变化，一些神经病变也可能与之有关，譬如狂牛症与老年痴呆症。
 
-想了解更多资讯，请扫描农场二维码：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/85c861bf6b6325b4.jpg)
+视频:[https://gettr.com/post/pp3dazdd66](https://gettr.com/post/pp3dazdd66)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
