--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,34 +1,28 @@
 ---
-title: 短视频：数以百万计的人已经转移到了盖特
+title: 中共借福奇之口定性美国疫情应对失败的原因
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1879485/)
+`儒为` [轉載自GNews](https://gnews.org/zh-hans/1879498/)
 
-**翻译：Julia Gao**
-**校对：枳实**
-**视频剪辑：向上James**
-**编辑：文泓**
+作者：德国纽伦堡正义农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/01/福奇.jpeg)封面来源：网络图片
+新华社日内瓦2022年1月18日报道，美国国家过敏症和传染病研究所所长安东尼·福奇在17日举行的2022年世界经济论坛视频会议上说，美国本应该是应对新冠大流行准备最充分的国家，但却成为受疫情影响最严重的少数几个国家之一。美国公共卫生领域的不平等性，是造成这一现象的重要原因。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/811-2.png)图片来源：视频截屏
+**福奇明显是把自己在疫情和疫苗事件中的犯罪行为“甩锅”给美国整个公共卫生领域，目的就是在为即将到来的病毒和疫苗追责中推卸责任，福奇难道不知道自己本身就是美国“卫生独裁”沼泽地中的一条大鳄鱼？**
 
+福奇在参加论坛关于新冠疫情未来发展趋势视频会议时说，如今，美国累计新冠确诊病例数已超过6500万、累计死亡近90万例，“这真的是非常不幸，也是我们原本希望可以避免的情况”。
 
-看看，又一轮的追随者的大潮。继顶级播客主持人乔·罗根在1月2日开设了一个盖特账户，这之后，该公司（盖特）说它新注册用户已经超过100万。这包括像福克斯新闻主持人塔克·卡尔森，及图尔西·加巴德，国会议员马特·盖茨，参议员罗恩·约翰逊等大人物。我也在那里注册了。罗根是在推特禁止罗伯特·马龙博士和国会议员马乔里·泰勒·格林之后做出转移到盖特的这一举动。杰里米，现在我要采访的是盖特首席执行官。
+**福奇在说这些冰冷数字的时候，难道一点愧疚之心都没有？福奇难道忘记了是谁给中共武汉实验室进行“病毒功能增强性实验”提供资金支持和技术支持？中共病毒爆发之际是谁说病毒不是来自实验室？是谁不敢提也不允许医生给病人推荐硫酸羟氯喹和伊维菌素？是谁说，希望人们能自愿接种疫苗，但如果他们不打算这样做，有时你不得不做一些不受欢迎的事情？太多了，不胜枚举，但这些都将会成为福奇的罪证。**
 
-这是杰森·米勒。杰森，很高兴见到你。非常感谢你应邀来到这里。对盖特来说，得到像乔·罗根这样的人对欢迎其他著名人物有多重要呢？
+福奇总结说，“全球大流行需要全球应对，我们必须始终牢记公平问题，不能让病毒在世界某个地方自由传播的情况出现……我们应该作为一个全球社区去应对（挑战），这就是（疫情）给我们的重要教训。”。
 
-好吧，玛丽亚，早上好! 能有像乔·罗根这样的人物加入盖特绝对是非同小可。显然，我们看到了在罗伯特·马龙博士与马乔里·泰勒·格林身上发生的事了。他们被永久地踢出了推特。昨晚，伟大的塔克·卡尔森也加入了我们，这显然对我们的盖特平台又是一个巨大的推动。
+**这个总结完全暴露了福奇及其背后世界黑暗势力和中共的野心，那就是要通过中共病毒的全球大流行造成的恐惧，给全世界老百姓都注射上毒疫苗，最后达到霸占整个地球、控制全人类命运的邪恶目的。**
 
-但我认为，我们现在看到的，是对大型科技公司的全盘抛弃，我们必须有替代平台，不因人们的政治信仰而进行审查。但是我想说，玛丽亚，随着所有这些新人物的加入，我们很高兴有他们所有的人加入盖特。我必须这么说，他们占据了先机，他们在这个（抛弃大科技公司的）浪潮中走在了前面。
+新闻来源：🔗[福奇：公共卫生领域不平等是美国新冠疫情严重的重要原因](http://www.news.cn/world/2022-01/19/c_1128277767.htm)
 
-视频链接：[GETTR News on GETTR: “ICYMI: #GETTR CEO @jasonmiller…”](https://www.gettr.com/post/pnp3z2f178)
+*编辑/校对/发稿：德国纽伦堡正义农场-儒为*
 
-发布：文泓
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+想了解更多资讯，请扫描农场二维码：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/85c861bf6b6325b4.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
