--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 地理位置对国家的影响 为何中共国要东扩拿回台湾
+title: 西藏独立的意义
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879483/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879499/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
