--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 接下来怎么支持独立
+title: 独立，新中国联邦一定会帮助喜币交易量，价值
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882321/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882353/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
