--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 青蒿素救了打了三针疫苗的琉球女孩
+title: 共产党一定会被审判
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882705/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882811/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
@@ -15,8 +15,6 @@ title: 青蒿素救了打了三针疫苗的琉球女孩
 澳大利亚墨尔本雅典娜农场Discord
 澳大利亚墨尔本雅典娜农场GTV直播1台
 ```
-
-
 
 
  
