--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党利用西方的逻辑
+title: 疫苗两个月内停止
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882804/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882829/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
