--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 通胀和通缩对社会造成的巨大影响
+title: 社交媒体的两个核心
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1882987/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1883082/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 图片来源：雅典娜设计组
@@ -9,6 +9,8 @@ title: 通胀和通缩对社会造成的巨大影响
 ```
 发布：陶子更多资讯，请关注：澳大利亚墨尔本雅典娜农场Twitter：HimalayaAthena澳大利亚墨尔本农场Gettr：himalayaathena澳大利亚墨尔本雅典娜农场YouTube澳大利亚墨尔本雅典娜农场Discord澳大利亚墨尔本雅典娜农场GTV直播1台
 ```
+
+
 
 
  
