--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 疫苗停止后的法律争议
+title: 骗取喜币是犯罪行为
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1898390/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1898605/)
 
 台灣寶島農場
 
