--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 一人一票的选择是我们所追求的
+title: 骗取喜币是犯罪行为
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1898545/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1898605/)
 
 台灣寶島農場
 
