--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 爆料革命全体作战
+title: HBO和Vice的关系
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900792/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900934/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
