--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: Vice记者采访的目的是为了污蔑郭先生
+title: Vice对郭先生的采访绝非是偶然的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900960/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901000/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
