--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: HBO和Vice的关系
+title: 共产党对七哥的攻击向来都是组合拳
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900934/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900971/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
