--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党对海外华人的长期影响
+title: Vice记者采访的目的是为了污蔑郭先生
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900924/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900960/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
