--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: Vice记者采访的目的是为了污蔑郭先生
+title: 伊莎贝拉你认不认识吴征,胡舒立,单伟健.你为什么不报道PAG
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1900960/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901071/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
