--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 海外媒体帮中共政治大宣传
+title: 活着才能实现目标
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901772/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1901909/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
