--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈人生规划（四）
+title: 七哥谈人生规划（五）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906687/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1906711/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
