--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,21 +1,32 @@
 ---
-title: 文·贵天成 &#8211; “爆料革命”盘古开天地（三）
+title: 01/25每日播报｜美国顶级医生敦促公众停止接种中共病毒疫苗
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907390/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907457/)
 
-##### 整理：澳雅大直播工作组视频剪辑小队
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
 
-文贵第一次提 ：** 一切都是刚刚开始 **！
+**[2022-01-25](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
 
-*发布：玉米地守望者*
+《网关专家》1月24日报道，美国内科医生、心脏病专家、流行病学家和中共病毒灾难医疗应对的领导者彼得·麦卡洛博士（Peter McCullough），敦促公众停止接种中共病毒疫苗。他指出，在世界范围内，疫苗计划适得其反，那些疫苗接种率最高的国家，死亡率也最高。
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+周日，麦卡洛在华盛顿特区举行的 “击败强制 “集会上告诉《网关专家》，那些已经接种过一到两剂中共病毒疫苗的人，如果再接种第三剂，将大大增加身体器官衰竭或致命的风险。他强烈反对会在身体的大脑、肺、心脏、骨髓和生殖器官中产生刺突蛋白的“基因疫苗”。
 
+德克萨斯州的一位医生表示，市面上的辉瑞、莫德那、强生和阿斯利康基因疫苗所含的刺突蛋白在体内持续的时间比人们想象的要长得多，而且都聚集在重要部位，包括大脑、肺、心脏、骨髓和生殖器官。
+
+这位医生还建议，在没有找到方法排出那些刺突蛋白前，不要再接种这种基因疫苗了。因为人体内的刺突蛋白会逐渐积累，无法自动排出体外。它几乎肯定会导致慢性疾病甚至是死亡。
+
+麦卡洛博士警告说，不仅中共病毒疫苗是危险和致命的，而且全美国的医院都在危险地遵从一个中共病毒治疗方案，这会令住院的感染病人必死无疑。现在，这些方案已经被评估是不可信的。
+
+据报道，所谓治疗方案是指，医院通常会给中共病毒阳性患者使用损害肾脏和肝脏的 “瑞德西韦”，随着患者的健康状况下降，遵循此方案的医生会对他们负责治疗的患者实施气管插管，这一过程可能会导致患者死亡。
+
+（ 秘翻新闻主编  冰糖葫芦喵编译报道 ）
+
+发布 :星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
