--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,19 +1,25 @@
 ---
-title: 尽管完全接种率高达85%，但马耳他的新冠死亡率创下新高
+title: “专制主义的大流行”拜登强推疫苗强制执行
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1907333/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1907371/)
 
-#### 翻译/撰稿：zzballack
+翻译：Annabelle
+校对：精灵蓝
+剪辑|字幕：小强
+编辑：Mttfly
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-22.jpg)图片来源：路透社
-据《门户专家》（Gateway Pundit）1月24日报道，作为全球新冠疫苗接种率最高的国家之一，马耳他（Malta）超过85%的人口已完全接种了疫苗，94%的人至少接种了一剂疫苗。但马耳他的新冠疫情不仅没有改善，还愈发恶化，该国的新冠死亡率刚刚达到历史最高值。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片2-5.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/图片3-4.jpg)
-马耳他人的生活也并没有因为遵从疫苗接种而恢复正常。1月13日，马耳他实施了新的防疫规定。据《马耳他时报》(Times of Malta) 报道，马耳他人将不得不在餐馆、酒吧、电影院等各种场所出示疫苗护照，以证明接种了最新的加强针疫苗。另外有报道说，在防疫新规实施期间，许多餐馆决定关闭，其中约14%的餐馆预计将永久关闭。
+在接受福克斯新闻采访时，第一自由研究所特别顾问杰里米·戴斯认为，在疫苗强制令上，拜登总统完全超出了宪法授予他的权限范围。冠状病毒大流行现在彻底变成了“独裁大流行”。疫苗强制令侵犯了州政府的权力，也践踏了第一修正案。宗教组织也不得不违背他们的信仰，强迫员工接种疫苗。如果总统可以像皇帝般继续强制接种，那宪法还有什么意义？他呼吁，所有人都有权利选择是否接种疫苗，而不是因此被炒鱿鱼、罚款。
 
-马耳他这个典型例子足以说明新冠疫苗不仅无法遏制疫情，还会加剧危机。不夸张地说，马耳他这个小国正面临着亡国的风险。
+视频链接：[‘](https://video.foxnews.com/v/6290423929001)[A pandemic of the autocrat’: Biden pushes for vaccine mandates](https://video.foxnews.com/v/6290423929001)
 
-新闻来源：[Fully Vaccinated Malta Reaches Record COVID-19 Death Rate](https://www.thegatewaypundit.com/2022/01/fully-vaccinated-malta-reaches-record-covid-19-death-rate/)
+*发布：*tianzhihuan
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
