--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,12 +1,19 @@
 ---
-title: 我们代表17,000名医生、科学家及全人类来告诉人们真相
+title: 中日财经爆｜东京都新建公寓售出总数和平均售价创历史新高
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1907234/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1907309/)
 
-01/23/2022 理查德·乌索医生：我们代表17,000名医生、科学家及全人类。我们有三项几乎无可争辩的由高质量数据支持的建议。今天你将听到真相，我请你鼓起勇气加入我们一起帮助我们的后代抵抗这个暴政。
+撰稿：东京樱花团｜百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-2058.png)[*图片来源*](https://e-images.juwaistatic.com/2021/02/japan-tallest-skyscraper-tokyo-1200x675.jpg)
+据《读卖新闻》在线报道，房地产经济研究所1月25日宣布，2021年东京都地区（东京、神奈川、埼玉、千叶）的新公寓平均售价为每套6260万日元，比上一年增长了2.9%。超过了1990年经济泡沫时期的6123万日元的记录。每平方米的售价也达到了93.6万日元的历史新高。
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+年度出售的房屋数量增加了23.5%，达到33,636套，与前一年（2020年）因中共病毒（新冠病毒、Covid-19）而暂时停止了销售活动的情况相比有所反弹。两年来房屋销售数量首次超过了3万套。
 
+信息来源：[**首都圏の新築マンション、平均価格ついにバブル超え…１戸あたり６２６０万円**](https://news.yahoo.co.jp/articles/db1469838ea29dd92bb3ab61e3a5eaabee8b922f#:~:text=%E3%83%88)
+
+*校对：东京樱花团/東洋武士*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
