--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,32 +1,28 @@
 ---
-title: 01/25每日播报｜美国顶级医生敦促公众停止接种中共病毒疫苗
+title: 1.24大直播后记：冬奥会是习皇帝的新衣
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1907457/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1907590/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+整理：雅典娜速记组
+编辑：Rianna
 
-**[2022-01-25](https://gtv.org/broadcast/watch/61efbcff28a108147c623806)**
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/BWNK1_1X27NIYGAOUF.png)图片来源：雅典娜农场设计组
 
-《网关专家》1月24日报道，美国内科医生、心脏病专家、流行病学家和中共病毒灾难医疗应对的领导者彼得·麦卡洛博士（Peter McCullough），敦促公众停止接种中共病毒疫苗。他指出，在世界范围内，疫苗计划适得其反，那些疫苗接种率最高的国家，死亡率也最高。
 
-周日，麦卡洛在华盛顿特区举行的 “击败强制 “集会上告诉《网关专家》，那些已经接种过一到两剂中共病毒疫苗的人，如果再接种第三剂，将大大增加身体器官衰竭或致命的风险。他强烈反对会在身体的大脑、肺、心脏、骨髓和生殖器官中产生刺突蛋白的“基因疫苗”。
+这个冬奥会有一个玄机，大家可能是没有注意到的。最近国内媒体出奇地安静，就是宣传方法，大外宣吹狼蛋这个招数都没怎么用；而且不自信不确定谁能来，包括必须公布的外国领导人，所谓的奥运会的欢迎仪式晚宴， 然后搞一些悬念开幕式，这是极大不确定性；媒体上也不自信，还有更重要的事情可以看出它一系列的政策，尝试着去放这个气候导弹弄点雪下来。我们能从这一系列端倪能看出来，习近平本人也不自信开成什么样就和各国勾兑，现在完全也不确定。在开幕式上一些节目，听说到昨天还在改。本来要把习主席、习太阳出来的时候，像当年希特勒一样，一站出来手一伸那个镜头要修改；要把习太阳，像邓小平南巡讲话里边有一个词坚决不能说，就是邓小平一个老人到南边转一圈，然后画了一个圈，这画圈时候不能说，意味着不是他画的。 他认为这是习仲勋画的，所以这句话不能说。特别是对待这次冬奥会开幕式，有一句话不能说，就是党和国家第四代领导人习近平先生要改为党和国家核心领导人，现在是独尊了，真的要独尊了。 而且特别明确的是中国冬奥会将获巨大成功，是改革开放走向新纪元。 新纪元这词很大，新纪元的一个开始。那么另外一个就是现场没有观众，他们要搞出网络上一定会说超过12亿人次的观看，你看这个数据都会出来，一定超过12亿。而且不但超过12亿人看，外国的商家很多赞助厂商都不去了，不到现场转播也去不了，才会说由于病毒和疫苗，以及西方反华势力的搞破坏，给我们社交媒体上带来了巨大关注量，十几亿次看，点赞率是60%、70%可能，甚至80%，然后一系列的支持中国。现在已经派到海外巴基斯坦、古巴、阿富汗、法国、德国和加拿大已经准备好了，到时候会看到采访华人，可以采访路人甲、路人乙全都出来了：“ 我看了北京冬奥会，这简直是太好了，你们做的太好了，你们这个情况下防止疫苗、防止病毒都安排好了。” 从外打内，从内打外，这些事情郭文贵早已知道，看到这些出招以后，他太了解共产党的招数了，这是要给谁看、要叫谁看。第一，篡改历史，要把这个冬奥会去搞成一个无举世无双的，在病毒期间的，被西方打压的，一场重大的成功奥运会。
 
-德克萨斯州的一位医生表示，市面上的辉瑞、莫德那、强生和阿斯利康基因疫苗所含的刺突蛋白在体内持续的时间比人们想象的要长得多，而且都聚集在重要部位，包括大脑、肺、心脏、骨髓和生殖器官。
+习近平要让内部中国人民看到在这种情况下，习太阳都能搞这样的冬奥会，那有没有疫苗、有没有病毒那不更厉害了。江泽民、胡锦涛怎么跟我比呀，是不是？完了之后，就真可能就打台湾了。这个是大家也看到的在全世界一切的铺垫。所有人都在讨论冬奥会的时候，乌克兰、台湾将生事端。就像当年的希特勒和苏联一样，所有冬奥会以后，他们判断世界人民对这个国家的好感和政治上的反应是最麻木的，他要行动。
 
-这位医生还建议，在没有找到方法排出那些刺突蛋白前，不要再接种这种基因疫苗了。因为人体内的刺突蛋白会逐渐积累，无法自动排出体外。它几乎肯定会导致慢性疾病甚至是死亡。
+资料来源：郭先生GTV和盖特直播视频。
 
-麦卡洛博士警告说，不仅中共病毒疫苗是危险和致命的，而且全美国的医院都在危险地遵从一个中共病毒治疗方案，这会令住院的感染病人必死无疑。现在，这些方案已经被评估是不可信的。
+发布：  tianzhihuan
 
-据报道，所谓治疗方案是指，医院通常会给中共病毒阳性患者使用损害肾脏和肝脏的 “瑞德西韦”，随着患者的健康状况下降，遵循此方案的医生会对他们负责治疗的患者实施气管插管，这一过程可能会导致患者死亡。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-（ 秘翻新闻主编  冰糖葫芦喵编译报道 ）
-
-发布 :星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
