--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 得中原佛手者得天下
+title: 习身边彭蕾的地位，一人之下万人之上
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1916403/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1916554/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
