--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 迷信是对死亡的恐惧
+title: 国内很多人打假疫苗，很多人死
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1916597/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1916667/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
