--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦的宣言（二）
+title: 七哥聊摇滚流行乐由来
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1916958/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917185/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
