--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 应战友要求展示新款Gfashion绿鳄皮衣（二）
+title: 宫廷圈养的丑陋和无知
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917060/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917173/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
