--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 应战友要求展示新款Gfashion绿鳄皮衣（一）
+title: 关于彭丽媛的笑话·上
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917041/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917137/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
