--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥聊摇滚流行乐由来
+title: 国内疫苗灾难，国内战友如何抱团取暖
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917185/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917273/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
