--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 关于彭丽媛的笑话·下
+title: 共产主义创伤的第一核心问题
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917154/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917247/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
