--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 关于彭丽媛的笑话·上
+title: 日本未来是继美国之后喜币,喜支付发行的第二大市场
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917137/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917232/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
