--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 国内战友如何抱团取暖
+title: 我们每个人都是煽动翅膀的蝴蝶（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917287/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917553/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
