--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 亚洲的农场在2022年一定会整出大动静来
+title: 2022是巨大的机会 Hpay1月份即将上线
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917222/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917470/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
