--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对亚洲农场和农场战友的寄语
+title: Gtv Gnews Hcoin将投胎换骨
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917213/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917438/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
