--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: Gtv Gnews Hcoin将投胎换骨
+title: 七哥对战友的总结，我们在新中国联邦找到自己
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917438/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1917611/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
