--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥开心的事冬奥会能开成功
+title: 什么是教育
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1920942/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1921085/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
