--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 经历是最好的老师，七哥的64经历（二）
+title: 最好的老师是上天
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921171/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1921243/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
