--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 树倒胡孙散
+title: 新中国联邦有上天神秘力量护佑
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922047/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922154/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
