--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦有上天神秘力量护佑
+title: 盘古龙的故事（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922154/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922261/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
