--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 干大事举重若轻有取有舍
+title: 新中国联邦上天神秘力量来源（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922066/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922188/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
