--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 10万美金不是喜币的目标
+title: 七哥五年爆料帮了很多朋友（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922328/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922404/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
