--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 唯一合法流通的是喜币
+title: 中共房地产和网红都完了
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922338/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922511/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
