--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 茉莉花运动是直插共产党心脏
+title: 用甜蜜蜜开启中共的噩梦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922754/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922901/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
