--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 中共洗脑让中国人没有信仰、法律、道德由此产生灾难的结果
+title: 美国撤馆的意义 不断不交弄死你
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922850/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922915/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
