--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 为什么叫甜蜜蜜行动
+title: 用甜蜜蜜开启中共的噩梦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922831/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922901/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
