--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 即将发生的甜蜜蜜意想不到的精彩
+title: 
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922888/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1922935/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
