--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 太平联盟诉讼证据造假
+title: 美国司法部被国外机构行贿和腐败
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1927962/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928058/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
