--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 太平联盟诉讼法律程序不正义（一）
+title: 共产党对文贵先生的法律超限战
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928118/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928174/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
