--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 太平联盟诉讼提供假文件
+title: 太平联盟诉讼法律程序不公正（二）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928102/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1928141/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
